# unknown-project

./: CMakeLists.txt  README.md
geolocation/geocoder/: main.py
geolocation/ipinfo/: main.py
language models/pythonProject_en/: main.py
language models/pythonProject_ru/: main.py
libs/: link.txt
pythonProject/: main.py  run.py
pythonProject/app/: __init__.py  config.py  db.py  models.py  routes.py  scraper.py  sentiment.py  utils.py
pythonProject/app/templates/: budget.html  favorites.html  index.html  login.html  news_table.html  register.html  two_cities.html
src/reconstruction/sift/: sift.cpp  sift.h
